	Made selectOuterText() and getOuterText() methods on the rangeHelper accessible.
	Greatly increased the number of tests.
	Improved the XHTML plugin.
	Fixed bug with XHTML plugin outputting <br /> when editor is empty.
		- Thanks to @tim-se for reporting
	Fixed Mozilla's junk attributes, type="_moz", _moz_dirty="" and _moz_editor_bogus_node.
		- Thanks to @tim-se for reporting

Version 1.4.2:
	Added emoticons() method which allows enabling/disabling emoticons at runtime.
	Fixed bug with jQuery UI dialogs and SCEditor dropdowns appearing behind them.
		- Thanks to @EugeneAksyonov for reporting
	Fixed bug with multiple editors and maximise.
		- Thanks to Tauno for reporting
	Fixed whitespace handling bug causing new lines to be removed from text pasted from Word.
		- Thanks to @lpuig for reporting
	Improved dropdowns to close if the button is clicked twice.
		- Thanks to @hhy89 for updating
	Fixed bug with Chrome losing the selection when using autoUpdate option.
		- Thanks to @lpuig for reporting
	Added support for auto focus to place the cursor at the end.
	Fixed bug where pasted emoticons ":)" were not being converted into emoticon images.
		- Thanks to @shaoner for reporting
	Fixed bug where if the BBCode styles property was null it caused an error.
		- Thanks to @OmarHawk for reporting
	Fixed bug with iOS losing focus.
		- Thanks to @coder4u for reporting.
	Fixed bug with emoticonsRoot option not working at startup.
		- Thanks to @tucan39 for reporting
	Fixed bug with unknown BBCodes being handled incorrectly.
		- Thanks to @KN4CK3R for reporting
	Fixed bug with % based widths and heights.
	Fixed bug with editor height when created in a hidden div.
		- Thanks to @berridgeab for reporting
	Fixed bug with new lines and when two block level elements are next to each other.
		- Thanks to @martec for reporting
	Fixed bug with emoticonsRoot being preprended multiple times if more than one editor instance.
		- Thanks to @KN4CK3R for reporting

Version 1.4.1: