@@ -1,0 +1,1 @@
+(function(o){"use strict";o.sceditor.plugins.format=function(){var e,a,t=this,r={p:"Paragraph",h1:"Heading 1",h2:"Heading 2",h3:"Heading 3",h4:"Heading 4",h5:"Heading 5",h6:"Heading 6",address:"Address",pre:"Preformatted Text"};t.init=function(){var e=this.opts,t=e.paragraphformat;o.sceditor.plugins.bbcode&&e.plugins&&e.plugins.indexOf("bbcode")>-1||(t&&(t.tags&&(r=t.tags),t.excludeTags&&o.each(t.excludeTags,function(o,e){delete r[e]})),this.commands.format||(this.commands.format={exec:a,txtExec:a,tooltip:"Format Paragraph"}),e.toolbar===o.sceditor.defaultOptions.toolbar&&(e.toolbar=e.toolbar.replace(",color,",",color,format,")))},e=function(o,e){o.sourceMode()?o.insert("<"+e+">","</"+e+">"):o.execCommand("formatblock","<"+e+">")},a=function(a){var t=this,n=o("<div />");o.each(r,function(a,r){o('<a class="sceditor-option" href="#">'+(r.name||r)+"</a>").click(function(){return t.closeDropDown(!0),r.exec?r.exec(t):e(t,a),!1}).appendTo(n)}),t.createDropDown(a,"format",n)}}})(jQuery);
