@@ -1,166 +1,41 @@
-.sceditor-button div,
-div.sceditor-grip
-{
-	background-image: url(famfamfam.png);
-	width: 16px;
-	height: 16px;
-	background-repeat: no-repeat
-}
-.sceditor-button-youtube div
-{
-	background-position: 0px 0px;
-}
-.sceditor-button-link div
-{
-	background-position: 0px -16px;
-}
-.sceditor-button-unlink div
-{
-	background-position: 0px -32px;
-}
-.sceditor-button-underline div
-{
-	background-position: 0px -48px;
-}
-.sceditor-button-time div
-{
-	background-position: 0px -64px;
-}
-.sceditor-button-table div
-{
-	background-position: 0px -80px;
-}
-.sceditor-button-superscript div
-{
-	background-position: 0px -96px;
-}
-.sceditor-button-subscript div
-{
-	background-position: 0px -112px;
-}
-.sceditor-button-strike div
-{
-	background-position: 0px -128px;
-}
-.sceditor-button-source div
-{
-	background-position: 0px -144px;
-}
-.sceditor-button-size div
-{
-	background-position: 0px -160px;
-}
-.sceditor-button-rtl div
-{
-	background-position: 0px -176px;
-}
-.sceditor-button-right div
-{
-	background-position: 0px -192px;
-}
-.sceditor-button-removeformat div
-{
-	background-position: 0px -208px;
-}
-.sceditor-button-quote div
-{
-	background-position: 0px -224px;
-}
-.sceditor-button-print div
-{
-	background-position: 0px -240px;
-}
-.sceditor-button-pastetext div
-{
-	background-position: 0px -256px;
-}
-.sceditor-button-paste div
-{
-	background-position: 0px -272px;
-}
-.sceditor-button-orderedlist div
-{
-	background-position: 0px -288px;
-}
-.sceditor-button-ltr div
-{
-	background-position: 0px -304px;
-}
-.sceditor-button-left div
-{
-	background-position: 0px -320px;
-}
-.sceditor-button-justify div
-{
-	background-position: 0px -336px;
-}
-.sceditor-button-italic div
-{
-	background-position: 0px -352px;
-}
-.sceditor-button-image div
-{
-	background-position: 0px -368px;
-}
-.sceditor-button-horizontalrule div
-{
-	background-position: 0px -384px;
-}
-.sceditor-button-font div
-{
-	background-position: 0px -400px;
-}
-.sceditor-button-emoticon div
-{
-	background-position: 0px -416px;
-}
-.sceditor-button-email div
-{
-	background-position: 0px -432px;
-}
-.sceditor-button-date div
-{
-	background-position: 0px -448px;
-}
-.sceditor-button-cut div
-{
-	background-position: 0px -464px;
-}
-.sceditor-button-copy div
-{
-	background-position: 0px -480px;
-}
-.sceditor-button-color div
-{
-	background-position: 0px -496px;
-}
-.sceditor-button-code div
-{
-	background-position: 0px -512px;
-}
-.sceditor-button-center div
-{
-	background-position: 0px -528px;
-}
-.sceditor-button-bulletlist div
-{
-	background-position: 0px -544px;
-}
-.sceditor-button-bold div
-{
-	background-position: 0px -560px;
-}
-.sceditor-button-maximize div
-{
-	background-position: 0px -608px;
-}
-div.sceditor-grip
-{
-	background-position: 0px -576px;
-	width: 10px;
-	height: 10px;
-}
-.rtl div.sceditor-grip
-{
-	background-position: 0px -592px;
-}
+.sceditor-button div {background-image:url('famfamfam.png');background-repeat:no-repeat}
+.sceditor-button-youtube div {background-position:0px 0px;width:16px;height:16px;}
+.sceditor-button-link div {background-position:0px -16px;width:16px;height:16px;}
+.sceditor-button-unlink div {background-position:0px -32px;width:16px;height:16px;}
+.sceditor-button-underline div {background-position:0px -48px;width:16px;height:16px;}
+.sceditor-button-time div {background-position:0px -64px;width:16px;height:16px;}
+.sceditor-button-table div {background-position:0px -80px;width:16px;height:16px;}
+.sceditor-button-superscript div {background-position:0px -96px;width:16px;height:16px;}
+.sceditor-button-subscript div {background-position:0px -112px;width:16px;height:16px;}
+.sceditor-button-strike div {background-position:0px -128px;width:16px;height:16px;}
+.sceditor-button-source div {background-position:0px -144px;width:16px;height:16px;}
+.sceditor-button-size div {background-position:0px -160px;width:16px;height:16px;}
+.sceditor-button-rtl div {background-position:0px -176px;width:16px;height:16px;}
+.sceditor-button-right div {background-position:0px -192px;width:16px;height:16px;}
+.sceditor-button-removeformat div {background-position:0px -208px;width:16px;height:16px;}
+.sceditor-button-quote div {background-position:0px -224px;width:16px;height:16px;}
+.sceditor-button-print div {background-position:0px -240px;width:16px;height:16px;}
+.sceditor-button-pastetext div {background-position:0px -256px;width:16px;height:16px;}
+.sceditor-button-paste div {background-position:0px -272px;width:16px;height:16px;}
+.sceditor-button-orderedlist div {background-position:0px -288px;width:16px;height:16px;}
+.sceditor-button-maximize div {background-position:0px -304px;width:16px;height:16px;}
+.sceditor-button-ltr div {background-position:0px -320px;width:16px;height:16px;}
+.sceditor-button-left div {background-position:0px -336px;width:16px;height:16px;}
+.sceditor-button-justify div {background-position:0px -352px;width:16px;height:16px;}
+.sceditor-button-italic div {background-position:0px -368px;width:16px;height:16px;}
+.sceditor-button-image div {background-position:0px -384px;width:16px;height:16px;}
+.sceditor-button-horizontalrule div {background-position:0px -400px;width:16px;height:16px;}
+.sceditor-button-format div {background-position:0px -416px;width:16px;height:16px;}
+.sceditor-button-font div {background-position:0px -432px;width:16px;height:16px;}
+.sceditor-button-emoticon div {background-position:0px -448px;width:16px;height:16px;}
+.sceditor-button-email div {background-position:0px -464px;width:16px;height:16px;}
+.sceditor-button-date div {background-position:0px -480px;width:16px;height:16px;}
+.sceditor-button-cut div {background-position:0px -496px;width:16px;height:16px;}
+.sceditor-button-copy div {background-position:0px -512px;width:16px;height:16px;}
+.sceditor-button-color div {background-position:0px -528px;width:16px;height:16px;}
+.sceditor-button-code div {background-position:0px -544px;width:16px;height:16px;}
+.sceditor-button-center div {background-position:0px -560px;width:16px;height:16px;}
+.sceditor-button-bulletlist div {background-position:0px -576px;width:16px;height:16px;}
+.sceditor-button-bold div {background-position:0px -592px;width:16px;height:16px;}
+div.sceditor-button-grip {background-position:0px -608px;width:10px;height:10px;}
+div.sceditor-button-grip-rtl {background-position:0px -618px;width:10px;height:10px;}
